--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Run tests
         run: |
-          cp build/3rd/SDL/SDL3.so
+          cp build/3rd/SDL/SDL3.so ./
           ctest --test-dir build/tests --output-on-failure
