--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -1,8 +1,9 @@
 project(modern_renderer)
 
+set(EXTERNAL_CXX_FILES ${CMAKE_SOURCE_DIR}/3rd/SPIRV-Reflect/spirv_reflect.cpp)
 set(CXX_FILES src/core.cpp)
 
-add_library(${PROJECT_NAME} ${CXX_FILES})
+add_library(${PROJECT_NAME} ${CXX_FILES} ${EXTERNAL_CXX_FILES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC include/)
 
@@ -13,5 +14,6 @@ target_link_libraries(${PROJECT_NAME}
         Vulkan::Vulkan
         vk-bootstrap::vk-bootstrap
         GPUOpen::VulkanMemoryAllocator
+        spdlog::spdlog
         SDL3::SDL3
 )
