Add user-facing logging and more infrastructure

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -1,7 +1,11 @@
 project(modern_renderer)
 
 set(EXTERNAL_CXX_FILES ${CMAKE_SOURCE_DIR}/3rd/SPIRV-Reflect/spirv_reflect.cpp)
-set(CXX_FILES src/Core.cpp)
+set(CXX_FILES
+        src/Core.cpp
+        src/Logging.cpp
+        src/Renderer.cpp
+)
 
 add_library(${PROJECT_NAME} ${CXX_FILES} ${EXTERNAL_CXX_FILES})
 
