Fix issues with fmt on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,16 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/3rd")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Tells spdlog to use our fmt instead of built-in to C++ one
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+set(SPDLOG_FMT_EXTERNAL ON)
+
 # Dependencies - other projects need em
 add_subdirectory(3rd/vk-bootstrap)
 add_subdirectory(3rd/SDL)
 add_subdirectory(3rd/Catch2)
 add_subdirectory(3rd/VulkanMemoryAllocator)
+add_subdirectory(3rd/fmt)
 add_subdirectory(3rd/spdlog)
 add_subdirectory(3rd/SPIRV-Reflect)
 
