--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,10 @@ project(modern_renderer_tests)
 
 enable_testing()
 
+if (NOT MSVC AND BUILD_WITH_COVERAGE)
+    add_compile_options(--coverage)
+endif()
+
 add_executable(${PROJECT_NAME}
         src/test.cpp
 )
@@ -11,6 +15,13 @@ target_link_libraries(${PROJECT_NAME}
         Catch2::Catch2WithMain
         modern_renderer
 )
+
+if (BUILD_WITH_COVERAGE AND NOT MSVC)
+    target_link_libraries(${PROJECT_NAME}
+            PUBLIC
+            --coverage
+    )
+endif()
 
 include(CTest)
 include(Catch)
