--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -41,8 +41,9 @@ jobs:
         run: |
           echo "-------BEFORE LS-------"
           find . -maxdepth 3 -mindepth 3
+          find . -name "*.gcno"
           find . -name "*.gcda"
           echo "-------AFTER LS-------"
-          /build/tests/modern_renderer_tests
+          ./build/tests/modern_renderer_tests
           gcov -j coverage.gcda
           gunzip coverage.gcov.json.gz
