--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -43,3 +43,7 @@ jobs:
           gcovr -r . --object-directory build --json coverage.json --exclude 3rd/
           ls -l coverage.json
           gcovr -r . --object-directory build --exclude 3rd/
+
+      - name: Generate coverage badge
+        uses: we-cli/coverage-badge-action@main
+        if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
