--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -33,7 +33,6 @@ jobs:
           cmake --build build --config Release
 
       - name: Run tests
-        continue-on-error: true
         run: |
           export LD_LIBRARY_PATH=${{ github.workspace }}/build/SDL3:$LD_LIBRARY_PATH
           ctest --test-dir build/tests --output-on-failure
@@ -42,7 +41,7 @@ jobs:
         run: |
           gcovr -r . --object-directory build --json coverage.json --exclude 3rd/
           ls -l coverage.json
-          $total=$(gcovr -r . --object-directory build --exclude 3rd/ | grep TOTAL | awk '{print $4}')
+          total=$(gcovr -r . --object-directory build --exclude 3rd/ | grep TOTAL | awk '{print $4}')
           echo "TOTAL_COVERAGE=$total" >> $GITHUB_ENV
       
       - name: Send coverage data
